solve issues for display and save csv